--- a/AttendanceApp/package.json
+++ b/AttendanceApp/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/netinfo": "^11.4.1",
     "axios": "^1.11.0",
     "expo": "~53.0.22",
-    "expo-camera": "~16.1.11",
+    "expo-camera": "^16.1.11",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-paper": "^5.14.5"
+    "react-native": "0.79.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
