--- a/AttendanceApp/app.json
+++ b/AttendanceApp/app.json
@@ -3,6 +3,7 @@
     "name": "Sistema Asistencia GPS",
     "slug": "attendance-gps-system",
     "version": "1.0.0",
+    "sdkVersion": "51.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
