--- a/AttendanceApp/package.json
+++ b/AttendanceApp/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "attendance-gps-app",
-  "version": "1.0.0",
+  "name": "attendance-facial-recognition-app",
+  "version": "2.0.0",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -9,19 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/netinfo": "^11.4.1",
-    "expo": "~53.0.22",
-    "expo-location": "~18.1.6",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.6"
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/netinfo": "^11.3.1",
+    "expo": "~51.0.0",
+    "expo-camera": "~15.0.16",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-location": "~17.0.1",
+    "expo-status-bar": "~1.12.1",
+    "react": "^18.2.0",
+    "react-native": "^0.74.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~18.2.79",
     "@types/react-native": "^0.72.8",
-    "typescript": "~5.8.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
