--- a/AttendanceApp/package.json
+++ b/AttendanceApp/package.json
@@ -17,7 +17,8 @@
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
-    "react-native": "^0.74.5"
+    "react-native": "^0.74.5",
+    "expo-brightness": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
