--- a/AttendanceApp/package.json
+++ b/AttendanceApp/package.json
@@ -18,7 +18,8 @@
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
     "react-native": "^0.74.5",
-    "expo-brightness": "~12.0.1"
+    "expo-brightness": "~12.0.1",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
