--- a/AttendanceApp/app.json
+++ b/AttendanceApp/app.json
@@ -16,7 +16,9 @@
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
-        "NSLocationWhenInUseUsageDescription": "Esta aplicación necesita acceso a la ubicación para registrar la asistencia con coordenadas GPS exactas"
+        "NSLocationWhenInUseUsageDescription": "Esta aplicación necesita acceso a la ubicación para registrar la asistencia con coordenadas GPS exactas",
+        "NSMicrophoneUsageDescription": "Esta aplicación necesita acceso al micrófono para grabar videos de registro facial",
+        "NSCameraUsageDescription": "Esta aplicación necesita acceso a la cámara para el reconocimiento facial"
       }
     },
     "android": {
@@ -27,7 +29,9 @@
       "edgeToEdgeEnabled": true,
       "permissions": [
         "android.permission.ACCESS_FINE_LOCATION",
-        "android.permission.ACCESS_COARSE_LOCATION"
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
       ]
     },
     "web": {
@@ -38,6 +42,13 @@
         "expo-location",
         {
           "locationAlwaysAndWhenInUsePermission": "Permite a $(PRODUCT_NAME) usar tu ubicación para registro de asistencia con coordenadas GPS exactas"
+        }
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Esta aplicación necesita acceso a la cámara para el reconocimiento facial",
+          "microphonePermission": "Esta aplicación necesita acceso al micrófono para grabar videos de registro facial"
         }
       ]
     ]
