--- a/AttendanceApp/app.json
+++ b/AttendanceApp/app.json
@@ -17,7 +17,7 @@
       "supportsTablet": true,
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "Esta aplicación necesita acceso a la ubicación para registrar la asistencia con coordenadas GPS exactas",
-        "NSCameraUsageDescription": "Esta aplicación necesita acceso a la cámara para el reconocimiento facial"
+        "NSCameraUsageDescription": "Esta aplicación necesita acceso a la cámara para el reconocimiento facial y registro por video"
       }
     },
     "android": {
@@ -45,8 +45,8 @@
       [
         "expo-camera",
         {
-          "cameraPermission": "Esta aplicación necesita acceso a la cámara para el reconocimiento facial",
-          "microphonePermission": "Esta aplicación necesita acceso al micrófono para grabar videos de registro facial"
+          "cameraPermission": "Esta aplicación necesita acceso a la cámara para el reconocimiento facial y registro por video",
+          "microphonePermission": "Esta aplicación necesita acceso al micrófono para grabar videos de registro (sin audio)"
         }
       ]
     ]
