--- a/AttendanceApp/package.json
+++ b/AttendanceApp/package.json
@@ -12,14 +12,15 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.3.1",
     "expo": "~51.0.0",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-brightness": "~12.0.1",
     "expo-camera": "~15.0.16",
+    "expo-file-system": "~17.0.1",
     "expo-image-manipulator": "~12.0.5",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
-    "react-native": "^0.74.5",
-    "expo-brightness": "~12.0.1",
-    "expo-file-system": "~17.0.1"
+    "react-native": "^0.74.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
